--- a/KoneProject/appsettings.json
+++ b/KoneProject/appsettings.json
@@ -13,6 +13,8 @@
   "Jwt": {
     "Key": "MaSuperCleUltraSecuriseeDe32CaracteresOuPlus!!",
     "Issuer": "UserApi",
-    "Audience": "KoneApiUsers"
+    "Audience": "KoneApiUsers",
+    "ValidAudience": "KoneApiUsers",
+    "ValidIssuer": "UserApi"
   }
 }
